# sconce

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN_TODO.md  Dockerfile  LICENSE  README.md  depot.json  dist-workspace.toml  docker-compose.yml  flake.nix  release-please-config.json
.github/workflows/: build-docker.yml  ci.yml  publish-mirror.yml  release-please.yml  sconce-release.yml
crates/sconce/: Cargo.toml
crates/sconce-archive/: Cargo.toml
crates/sconce-archive/src/: lib.rs
crates/sconce-cas/: Cargo.toml
crates/sconce-cas/src/: lib.rs  s3.rs  sigv4.rs
crates/sconce-catalog/: Cargo.toml
crates/sconce-catalog/migrations/: 0001_init.sql  0002_dist_shasum.sql  0003_tokens.sql  0004_update_policy.sql  0005_multitenancy.sql  0006_grants.sql  0007_licenses.sql  0008_accounts.sql  0009_token_expiry.sql  0010_org_settings.sql  0011_token_origin.sql  0012_repo_token_policy.sql  0013_repo_disallow_private.sql  0014_upstreams.sql  0015_mirror_jobs.sql  0016_upstream_credential_type.sql  0017_upstream_package_filter.sql  0018_generalize_jobs.sql  0019_dependency_plan.sql  0020_oidc.sql  0021_oidc_per_org.sql  0022_org_roles.sql  0023_scim.sql  0024_ci_oidc.sql  0025_package_lifecycle.sql  0026_credential_policy.sql  0027_slug_history.sql  0028_package_sets.sql  0029_update_bound.sql  0030_grant_policy.sql  0031_grant_rules.sql  0032_set_entitlements.sql  0033_upstream_requires.sql  0034_source_paths.sql  0035_password_resets.sql  0036_blob_refcount_gc.sql  0037_org_entitlements.sql  0038_editions.sql  0039_service_tokens.sql  0040_license_key_ciphertext.sql  (+14 more)
crates/sconce-catalog/src/: lib.rs  secret.rs
crates/sconce-git/: Cargo.toml
crates/sconce-git/src/: lib.rs
crates/sconce-metadata/: Cargo.toml
crates/sconce-metadata/src/: lib.rs
crates/sconce-mirror/: Cargo.toml
crates/sconce-mirror/src/: lib.rs  subscription.rs  version.rs
crates/sconce-server/: Cargo.toml  askama.toml
crates/sconce-server/assets/: app.css  login.js  repo.js
crates/sconce-server/src/: api.rs  ci.rs  csrf.rs  lib.rs  mail.rs  oidc.rs  publish.rs  ratelimit.rs  snapshots.rs  ui.rs
crates/sconce-server/src/ui/: views.rs
crates/sconce-server/templates/: account.html  activity.html  console.html  device_approve.html  device_approved.html  error.html  forgot.html  home.html  icons.html  license_created.html  login.html  new_org.html  new_repo.html  package_detail.html  repo_notice.html  repositories.html  reset.html  scim_token.html  status.html  token_created.html  upstream_notice.html  users.html
crates/sconce-server/templates/chrome/: doc.html  shell.html  sidebar.html
crates/sconce-server/templates/org/: overview.html  settings.html
crates/sconce-server/templates/repo/: page.html  settings.html
crates/sconce-server/templates/sets/: editor.html  list.html
crates/sconce/src/: main.rs
examples/scheduled-snapshot/: README.md  dump-and-upload.yml  upload-snapshot.sh
