[workspace]
resolver = "3"
members = [
    "crates/sconce",
    "crates/sconce-archive",
    "crates/sconce-cas",
    "crates/sconce-catalog",
    "crates/sconce-git",
    "crates/sconce-metadata",
    "crates/sconce-mirror",
]

[workspace.package]
version = "0.1.0" # x-release-please-version
edition = "2024"
rust-version = "1.96"
# EUPL-1.2, like the rest of the cresset-tools family. Chosen deliberately over
# AGPL: its definition of "Communication" covers "providing access to [the
# Work's] essential functionalities" over a network, so it carries an AGPL-style
# SaaS/network copyleft trigger — a competitor running this as a hosted service
# owes their modifications back. Open-core: this engine is EUPL; the hosted
# Bougie Repo control plane + agency/seller/SSO features are the commercial layer.
# Crates stay `publish = false` for now (not publishing to crates.io yet).
license = "EUPL-1.2"
authors = ["Jelle Besseling <jelle@pingiun.com>"]
repository = "https://github.com/cresset-tools/sconce"

# Intra-workspace deps centralized so members reference them with
# `{ workspace = true }`. Each carries both `path` (local builds) and a
# `version` (crates.io publish — cargo rejects a published crate whose deps
# lack a version). The trailing release-please marker lets the tool rewrite
# all of them in lockstep with `[workspace.package].version` above.
[workspace.dependencies]
sconce-archive = { path = "crates/sconce-archive", version = "0.1.0" } # x-release-please-version
sconce-cas = { path = "crates/sconce-cas", version = "0.1.0" } # x-release-please-version
sconce-catalog = { path = "crates/sconce-catalog", version = "0.1.0" } # x-release-please-version
sconce-git = { path = "crates/sconce-git", version = "0.1.0" } # x-release-please-version
sconce-metadata = { path = "crates/sconce-metadata", version = "0.1.0" } # x-release-please-version
sconce-mirror = { path = "crates/sconce-mirror", version = "0.1.0" } # x-release-please-version

# Shared external deps.
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
sha1 = "0.10"
thiserror = "2"
serde_json = "1"
# Local git access only (read trees at a ref). gix's default features give a
# working hash backend + rev-parse without pulling a network client (networking
# is opt-in, not default). `attributes` adds `.gitattributes` evaluation for
# honoring `export-ignore` when archiving a ref.
gix = { version = "0.70", features = ["attributes"] }
# Postgres only, runtime queries only — NO `macros` feature (no compile-time DB
# checks / query!/migrate! macros). Rows are mapped by hand.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[profile.release]
# Smaller, faster, no panic-unwinder — mirrors the family default.
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.dist]
inherits = "release"
