[package]
name = "sconce-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Renders Composer v2 repository metadata (packages.json + p2 per-package documents) from catalog rows."

[dependencies]
sconce-catalog = { workspace = true }
# Composer v2 wire format: RootManifest + PackageDocument document types.
composer-wire = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
