[package]
name = "sconce-mirror"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "The mirror worker: enumerate a git source's tags, read composer.json, archive each version into the CAS, and upsert the catalog."

[dependencies]
sconce-git = { workspace = true }
sconce-cas = { workspace = true }
sconce-catalog = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
