[package]
name = "sconce-mirror"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "The mirror worker: enumerate a git source's tags, read composer.json, archive each version into the CAS, and upsert the catalog."

[dependencies]
sconce-git = { workspace = true }
sconce-cas = { workspace = true }
sconce-catalog = { workspace = true }
# Composer version normalization + constraint matching (tags, subscriptions).
composer-semver = { workspace = true }
# Composer v2 wire format: parse + expand upstream p2/packages.json metadata.
composer-wire = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
# Fetching Composer-repo metadata + dist zips (composer-kind upstreams).
ureq = { workspace = true }
# Filtering available-packages for whole-registry mirroring.
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
# Test-only: an advisory-lock guard to serialize the global job-queue tests.
sqlx = { workspace = true }

[lints]
workspace = true
