[package]
name = "sconce"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A fast, Composer-compatible static repository generator (a Satis in Rust). Engine behind Bougie Repo."
readme = "../../README.md"
# Closed-source for now — internal engine behind Bougie Repo, not published.
publish = false
keywords = ["php", "composer", "satis", "repository", "packagist"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sconce"
path = "src/main.rs"

[dependencies]
sconce-archive = { workspace = true }
sconce-cas = { workspace = true }
sconce-catalog = { workspace = true }
sconce-git = { workspace = true }
sconce-mirror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["env"] }
tokio = { workspace = true }

[lints]
workspace = true
