[package]
name = "sconce"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A fast, Composer-compatible static repository generator (a Satis in Rust). Engine behind Bougie Repo."
readme = "../../README.md"
# Closed-source for now — internal engine behind Bougie Repo, not published.
publish = false
keywords = ["php", "composer", "satis", "repository", "packagist"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sconce"
path = "src/main.rs"

# Opt this crate back into dist (the workspace default in dist-workspace.toml is
# `dist = false` because the other 7 crates are libraries that ship no binary).
# Only `sconce` produces the user-facing `sconce` binary, so it's the only
# package dist needs to build.
[package.metadata.dist]
dist = true

[dependencies]
sconce-archive = { workspace = true }
sconce-cas = { workspace = true }
sconce-catalog = { workspace = true }
sconce-git = { workspace = true }
sconce-mirror = { workspace = true }
sconce-server = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["env"] }
# `macros` for tokio::select! and `time` for the worker's poll backstop.
tokio = { workspace = true, features = ["macros", "time"] }
uuid = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
# `sconce publish`: tar+gzip a package dir, sha256 the payload, and upload it over
# HTTP (obtaining a short-lived publish token via GitHub Actions OIDC).
tar = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
ureq = { workspace = true }
# Direct use of PgListener for the worker's LISTEN/NOTIFY wait.
sqlx = { workspace = true }
# Server/worker logs go through tracing (stderr, RUST_LOG-filtered); CLI
# command *output* stays println/stdout.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
